hphp/test/slow/sealed/sealed_classes6.php.expectf
Fatal error: Class SomeOtherOtherTrait may not inherit from sealed interface (SomeSealedInteface) without being in the whitelist in %s/hphp/test/slow/sealed/sealed_classes6.php on line 16
